# pivot

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  main.cpp  plot.py  test.cpp  utils.cpp  utils.h  vcpkg-configuration.json  vcpkg.json  walk.cpp  walk.h  walk_tree.cpp  walk_tree.h
.github/workflows/: release.yml  test.yml
assets/: walk.dot
bench/: specs_pc.txt  times2.json  times2_fast_pc.json  times2_simd.json  times2_slow.json  times2_slow_pc.json  times3_fast.json  times3_fast_pc.json  times3_slow.json  times3_slow_pc.json
scripts/: benchmark.py  estimate_nu.py
src/: graphviz.cpp  graphviz.h  loop.h  main.cpp  utils.cpp  utils.h  walk.cpp  walk.h  walk_base.h  walk_node.cpp  walk_node.h  walk_tree.cpp  walk_tree.h
src/include/: allocator.h  defines.h  expr.h  graphviz.h  lattice.h  lattice2d.h  lattice_simd.h  logging.h  utils.h  walk.h  walk_base.h  walk_node.h  walk_tree.h
src/lattice/: box.hpp  box_simd.hpp  lattice.cpp  lattice2.cpp  lattice2d.cpp  point.hpp  point_simd.hpp  transform.hpp  transform_simd.hpp
src/utils/: graphviz.cpp  lattice.cpp  logging.cpp  utils.cpp
src/utils/lattice/: box.cpp  box.hpp  lattice.cpp  point.cpp  point.hpp  transform.cpp  transform.hpp
src/walks/: walk.cpp  walk_node.cpp  walk_tree.cpp
src/walks/node/: ctors.cpp  ctors.hpp  graphviz.cpp  graphviz.hpp  pivot.cpp  pivot.hpp  walk_node.cpp  walk_node.hpp
tests/: CMakeLists.txt  int_test.cpp  lattice_test.cpp  test_utils.h  utils_test.cpp  walk_node_test.cpp  walk_tree_test.cpp
tools/: benchmark.py  format.sh  lint.sh  plot2d.py
tools/git/: pre-commit
